feat: Update dependencies and entry point
Updates React and lucide-react versions.
Refactors the application entry point from `index.tsx` to `script.tsx`.
Adjusts Vercel rewrites to better handle static assets.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
-
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!.*\\.(?:tsx|ts|js|css|json|png|jpg|jpeg|svg|csv|xlsx)).*)",
       "destination": "/index.html"
     }
   ]
